src/Pages/SingleQuizPage/styles.css
.single-quiz-container {
  display: flex;
  overflow-x: hidden;
  overflow-y: scroll;
  flex-direction: column;
  align-items: center;
  height: 100%;
  padding: 30px;
  background-color: #f5f5f5;
}

.quiz-questions {
  width: 80%;
  padding: 30px;
  background-color: white;
  box-shadow: 0px 0px 22px 1px var(--color-primary-dark);
}

.quiz-title {
  padding-top: 20px;
  padding-left: 5px;
  font-weight: 600;
  font-size: 22px;
  color: var(--color-primary);
  text-decoration: underline;
}

.delete-btn, .submit-btn {
  border: none;
  padding: 20px;
  width: 50%;
  margin: auto;
  cursor: pointer;
  margin-top: 20px;
  font-size: 22px;
  font-weight: 700;
}

.delete-btn {
  background-color: rgb(184, 0, 0);
  color: white;
}

.delete-btn:hover {
  background-color:rgb(252, 42, 42);
  transition: 0.5s ease;
}

.submit-btn {
  background-color: rgb(52, 202, 52);
}

.submit-btn:hover {
  background-color: rgb(78, 255, 78);
  transition: 0.5s ease;
}

